Bug 625722 - Firefox freezes in Mozilla TreeWalker demo. r=sicking a=blocking2.0