content/base/src/nsTreeWalker.cpp
@@ -366,11 +366,14 @@ nsresult nsTreeWalker::FirstChildInternal(PRBool aReversed, nsIDOMNode **_retval
                 node = sibling;
                 break;
             }
+
             nsINode *parent = node->GetNodeParent();
 
             if (!parent || parent == mRoot || parent == mCurrentNode) {
                 return NS_OK;
             }
+
+            node = parent;
 
         } while (node);
     }
